--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -24,7 +24,9 @@
           Movie
         </label>
 
-        <input type="text" id="movie_id" name="movie_id" placeholder="Movie" class="form-control" value="<%= @character.movie_id %>">
+        <!-- <input type="text" id="movie_id" name="movie_id" placeholder="Movie" class="form-control" value="<%= @character.movie_id %>"> -->
+      <%= select_tag(:movie_id, options_from_collection_for_select(Movie.all, :id, :title, @character.movie_id), :class => "form-control")%>
+
       </div>
 
       <!-- Label and input for actor_id -->
@@ -33,7 +35,7 @@
           Actor
         </label>
 
-        <input type="text" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= @character.actor_id %>">
+        <input type="text" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= Actor.find_by(:id=> @character.actor_id).name %>">
       </div>
 
       <!-- Label and input for name -->
