--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -35,7 +35,9 @@
           Actor
         </label>
 
-        <input type="text" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= Actor.find_by(:id=> @character.actor_id).name %>">
+        <!-- <input type="text" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= Actor.find_by(:id=> @character.actor_id) %>"> -->
+
+          <%= select_tag(:actor_id, options_from_collection_for_select(Actor.all, :id, :name, @character.actor_id), :class => "form-control")%>
       </div>
 
       <!-- Label and input for name -->
