--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -53,7 +53,8 @@
       <button class="btn btn-success">
         Create Character
       </button>
-      <a href="/movies/new">Add a Movie</a>
+      <a href="/movies/new">Add a Movie, </a>
+      <a href="/actors/new">Add an Actor</a>
       or
       <a href="/characters">Cancel</a>
     </form>
