--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -39,11 +39,13 @@
 
 <table  >
   <col width="60%">
+
   <tr>
     <th>Movie</th>
     <th>Character</th>
   </tr>
   <% Character.where(:actor_id => @actor.id).each do |character| %>
+
   <tr>
     <td><a href="/movies/<%=character.movie_id %>"><%= Movie.find_by(:id => character.movie_id).title %></a></td>
     <td><a href="/characters/<%=character.id %>"><%= character.name %></a></td>
@@ -59,33 +61,17 @@
   <!-- Hidden input for authenticity token to protect from forgery -->
   <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-  <!-- Label and input for movie_id -->
   <div class="form-group">
-    <!-- <label for="movie_id" class="control-label">
-    Movie
-  </label> -->
-
-  <!-- <input type="text" id="movie_id" name="movie_id" placeholder="Movie" class="form-control" value="<%= @character.movie_id %>"> -->
-  <input type="hidden" name="movie_id" value="<%= @movie.id %>">
-
+  <%= select_tag(:movie_id, options_from_collection_for_select(Movie.all, :id, :title, @character.movie_id), :class => "form-control")%>
 </div>
 
-
-<!-- Label and input for actor_id -->
 <div class="form-group">
-  <label for="actor_id" class="control-label">
-    Actor
-  </label>
-
-  <!-- <input type="text" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= @character.actor_id %>"> -->
-  <%= select_tag(:actor_id, options_from_collection_for_select(Actor.all, :id, :name, @character.actor_id), :class => "form-control")%>
-
+  <input type="hidden" name="actor_id"  value="<%= @actor.id %>">
 </div>
 
-<!-- Label and input for name -->
 <div class="form-group">
   <label for="name" class="control-label">
-    Name
+    Character
   </label>
 
   <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @character.name %>">
