--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -46,6 +46,7 @@
 <%end %>
 </table>
 
+<h3>Add a Movie</h3>
 
 <form class="" action="/create_movie" method="post">
 
@@ -57,7 +58,7 @@
       Title
     </label>
 
-    <input type="text" id="title" name="title" placeholder="Title" class="form-control" value="<%= @movie.title %>">
+    <input type="text" id="Title" name="title" placeholder="Title" class="form-control" value="<%= @movie.title %>">
   </div>
 
   <!-- Label and input for year -->
@@ -66,7 +67,7 @@
       Year
     </label>
 
-    <input type="text" id="year" name="year" placeholder="Year" class="form-control" value="<%= @movie.year %>">
+    <input type="text" id="Year" name="year" placeholder="Year" class="form-control" value="<%= @movie.year %>">
   </div>
 
   <!-- Label and input for duration -->
@@ -75,7 +76,7 @@
       Duration
     </label>
 
-    <input type="text" id="duration" name="duration" placeholder="Duration" class="form-control" value="<%= @movie.duration %>">
+    <input  type="integer" id="duration" name="duration" placeholder=1 class="form-control" value="<%= @movie.duration %>">
   </div>
 
   <!-- Label and input for description -->
@@ -99,7 +100,7 @@
   <!-- Label and input for director_id -->
   <div class="form-group">
     <label for="director_id" class="control-label">
-      Director
+
     </label>
 
     <input type="hidden" name="director_id" value="<%= @director.id %>">
